--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="flex items-center justify-center">
           <div class="circle-color rounded-full h-36 w-36">
             <p class="text-6xl pt-9 pb-2 font-bold">76</p>
-            <h2 class="text-lg text-[#8b7ff5] font-semibold">of 100</h2>
+            <h2 class="text-lg text-[#978cf9] font-semibold">of 100</h2>
           </div>
         </div>
 
@@ -25,9 +25,48 @@
           </p>
         </div>
       </div>
-      <div>
-       
+      <div class="">
+        <div class="text-black pt-7 pl-3 text-xl font-bold p-7">Summary</div>
         
+        <div class="flex flex-col items-center justify-center font-semibold gap-4">
+          <div class="flex justify-between bg-[#fff6f5] w-[21rem] h-14 text-lg rounded-xl ">
+            <div class="flex gap-5 mx-2">
+              <img class="w-6 h-6 mt-4"  src="images/icon-reaction.svg" alt="reaction" />
+              <h3 class="mt-3 text-[#ff5757]">Reaction</h3>
+            </div>
+            <p class="mt-3 mx-2 text-[#978cf9]"><u class="no-underline text-black">80 </u>/ 100</p>
+          </div>
+
+
+          <div class="flex justify-between bg-[#fffbf2] w-[21rem] h-14 text-lg rounded-xl ">
+            <div class="flex gap-5 mx-2">
+              <img class="w-6 h-6 mt-4"  src="images/icon-memory.svg" alt="memory" />
+              <h3 class="mt-3 text-[#ffb01f]">Memory</h3>
+            </div>
+            <p class="mt-3 mx-2 text-[#978cf9]"><u class="no-underline text-black">92 </u>/ 100</p>
+          </div>
+
+
+
+          <div class="flex justify-between bg-[#f2fafa] w-[21rem] h-14 text-lg rounded-xl ">
+            <div class="flex gap-5 mx-2">
+              <img class="w-6 h-6 mt-4"  src="images/icon-verbal.svg" alt="verbal" />
+              <h3 class="mt-3 text-[#00bd91]">Verbal</h3>
+            </div>
+            <p class="mt-3 mx-2 text-[#978cf9]"><u class="no-underline text-black">61 </u>/ 100</p>
+          </div>
+
+
+
+          <div class="flex justify-between bg-[#f3f3fd] w-[21rem] h-14 text-lg rounded-xl ">
+            <div class="flex gap-5 mx-2">
+              <img class="w-6 h-6 mt-4"  src="images/icon-visual.svg" alt="visual" />
+              <h3 class="mt-3 text-[#1125d4]">Visual</h3>
+            </div>
+            <p class="mt-3 mx-2 text-[#978cf9]"><u class="no-underline text-black">61 </u>/ 100</p>
+          </div>
+
+        </div>
       </div>
     </div>
   </body>
