fully done for mobile

--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
               <img class="w-6 h-6 mt-4"  src="images/icon-visual.svg" alt="visual" />
               <h3 class="mt-3 text-[#1125d4]">Visual</h3>
             </div>
-            <p class="mt-3 mx-2 text-[#978cf9]"><u class="no-underline text-black">61 </u>/ 100</p>
+            <p class="mt-3 mx-2 text-[#978cf9]"><u class="no-underline text-black">72 </u>/ 100</p>
           </div>
 
+        </div>
+        <div class="pt-6 flex items-center justify-center">
+          <button class="text-white text-xl font-semibold py-4 bg-[#303b59] w-[21rem] rounded-full">Continue</button>
         </div>
       </div>
     </div>
